--- a/CSS/index.css
+++ b/CSS/index.css
@@ -22,6 +22,8 @@
 .dropdown .dropdown-content {
   width: 100%;
   position: absolute;
+  left: 0px;
+  transition: 1.5s;
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
@@ -42,7 +44,7 @@
   background-color: #931d25;
 }
 .dropdown .dropdown-hidden {
-  display: none;
+  left: -200px;
 }
 .tabs {
   width: 100%;
