--- a/components/Dropdown/Dropdown.less
+++ b/components/Dropdown/Dropdown.less
@@ -16,6 +16,8 @@
   .dropdown-content {
     width: 100%;
     position: absolute;
+    left: 0px;
+    transition: 1.5s;
     background-color: @white;
     display: flex;
     flex-direction: column;
@@ -36,7 +38,7 @@
     }
   }
   .dropdown-hidden {
-    display: none;
+    left: -200px;
   }
 }
 
