--- a/components/Tabs/Tabs.less
+++ b/components/Tabs/Tabs.less
@@ -8,8 +8,10 @@
     padding-top: 60px;
   }
   .tabs-item {
-    display: none; 
-
+    opacity: 0;
+    position: absolute;
+    left: -500px;
+    transition: 1.5s;
     width: 75%;
     .tabs-item-title {
       font-size: 24px;
@@ -18,7 +20,11 @@
     }
   }
   .tabs-item-selected {
-    display: block;
+    position: absolute;
+    width: 1200px;
+    left: 400px;
+    opacity:1;
+    transition: 1s;
   }
 
   .tabs-links {
